# paecs

./: CMakeLists.txt  README.md  README_CN.md
records/: Design.md  record.md  （一）刚开始.md
src/paecs/: Archtype.cpp  Archtype.h  ArchtypeManager.cpp  ArchtypeManager.h  Component.cpp  Component.h  ComponentIdCounter.cpp  ComponentIdCounter.h  ComponentMask.cpp  ComponentMask.h  ComponentPool.h  ECManager.cpp  ECManager.h  Entity.cpp  Entity.h  Entity.temp.h  EntityManager.cpp  EntityManager.h  SManager.cpp  SManager.h  Scene.cpp  Scene.h  Scene.temp.h  Scene_Entity.cpp  System.cpp  System.h  SystemManager.cpp  SystemManager.h  _Config.h  core.cpp  core.h  example.cpp  paecs.h  singleton.h
src/paecs/backup/: ComponentPool.h.bak  ECManager.h.bak  Entity.cpp.bak  Entity.h.bak
